XBEAN-243 url shouldn't be built manually + under win host is the disk in the url
git-svn-id: https://svn.apache.org/repos/asf/geronimo/xbean/trunk@1484008 13f79535-47bb-0310-9956-ffa450edef68